# ModuleWeb_11_Homework

./: .gitignore  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 333cd78fc4ea_init.py  4f54ae540319_init.py  af702ca48ea3_init.py  c685f73256b9_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: login.py  users.py
src/routes/: auth.py  avatar.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_login.py  test_unit_users.py
