[tool.poetry]
name = "home-project"
version = "0.1.0"
description = ""
authors = ["IvanBosovch <138058545+IvanBosovch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic-extra-types = "^2.5.0"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
